add docker config

--- a/package.json
+++ b/package.json
@@ -2,19 +2,33 @@
     "name": "game-events-ingestion",
     "version": "1.0.0",
     "scripts": {
+        "start": "node dist/app.js",
+        "build": "tsc",
         "migrate": "npx prisma migrate dev --schema=./src/prisma/schema.prisma",
-        "generate": "npx prisma generate --schema=./src/prisma/schema.prisma"
+        "generate": "npx prisma generate --schema=./src/prisma/schema.prisma",
+        "worker": "ts-node src/queue/worker.ts",
+        "test": "jest",
+        "dev": "ts-node-dev --respawn --transpileOnly src/app.ts"
     },
     "dependencies": {
         "@prisma/client": "^6.0.1",
+        "@types/jest": "^29.5.14",
         "bullmq": "^5.31.2",
         "express": "^4.21.2",
+        "ioredis": "^5.4.1",
         "pg": "^8.13.1",
         "prisma": "^6.0.1",
+        "ts-node": "^10.9.2",
+        "ts-node-dev": "^2.0.0",
         "zod": "^3.23.8"
     },
     "devDependencies": {
         "@types/express": "^5.0.0",
-        "@types/node": "^22.10.1"
+        "@types/node": "^22.10.1",
+        "@types/supertest": "^6.0.2",
+        "jest": "^29.7.0",
+        "supertest": "^7.0.0",
+        "ts-jest": "^29.2.5",
+        "typescript": "^5.7.2"
     }
 }
