--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,9 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - DATABASE_URL=postgresql://postgres:password1@db:5433/games?schema=public
+      - DATABASE_URL=postgresql://postgres:password1@db:5432/games?schema=public
+    env_file:
+      - .env.${NODE_ENV}
     depends_on:
       - db
       - redis
@@ -12,6 +14,8 @@ services:
   worker:
     build: .
     command: ts-node src/queue/worker.ts
+    env_file:
+      - .env.${NODE_ENV}
     depends_on:
       - redis
 
@@ -24,3 +28,5 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password1
       POSTGRES_DB: games
+    ports:
+      - "5433:5432"
